--- a/src/components/Portfolio.css
+++ b/src/components/Portfolio.css
@@ -1,80 +1,107 @@
 .project {
-    width: 80vw;
-    height: 60vh;
-    background-color: white;
-    margin-bottom: 5vh;
-    margin-left: auto;
-    margin-right: auto;
-    margin-top: 10vh;
-    display: flex;
-    padding-left: 10vw;
-    flex-wrap: wrap;
-
+  width: 80vw;
+  height: 60vh;
+  background-color: white;
+  margin-bottom: 5vh;
+  margin-left: auto;
+  margin-right: auto;
+  margin-top: 10vh;
+  display: flex;
+  padding-left: 5vw;
+  flex-wrap: wrap;
 }
 
 .logo {
-    height: 40vh;
-    width: 40vh;
-    margin-top: auto;
-    margin-bottom: auto;
-    margin-right: 5vw;
+  width: 50%;
+  height: 45vh;
+  margin-top: auto;
+  margin-bottom: auto;
+  box-shadow: 10px 10px 10px #000000a6;
+}
+
+.roboLogo {
+  width: 30vh;
+  height: 30vh;
+ margin: auto auto;
+  box-shadow: 10px 10px 10px #000000a6;
 }
 
 .details {
-    display: flex;
-    flex-direction: column;
-    margin-top: auto;
-    margin-bottom: auto;
+  display: flex;
+  flex-direction: column;
+  margin-top: auto;
+  margin-bottom: auto;
+  padding: 1em;
 }
 
 .view:hover {
-    text-decoration: none;
-    color: #EF5350
+  text-decoration: none;
+  color: #ef5350;
 }
 
+@media (max-width: 450px) {
+  .project {
+    font-size: 15px;
+    width: 90vw;
+    flex-direction: column;
+    padding: 3vw;
+    text-align: center;
+    height: 70vh;
+  }
 
-@media (max-width:800px) {
-    .project {
-        font-size: 15px;
-        width: 90vw;
-        flex-direction: column;
-        padding: 3vw;
-        text-align: center;
-    }
-
-    .logo {
-        height: 20vh;
-        width: 20vh;
-        margin-left: auto;
-        margin-right: auto;
-        
-    }
+  .logo {
+    height: 30vh;
+    width: 65vw;
+    margin-left: auto;
+    margin-right: auto;
+  }
 }
 
-@media (max-width:1100px) and (min-width:800px) {
-    .details {
-        width: 50%;
-    }
+@media (max-width: 800px) and (min-width: 450px) {
+  .project {
+    font-size: 15px;
+    width: 90vw;
+    flex-direction: column;
+    padding: 3vw;
+    text-align: center;
+    height: 70vh;
+  }
+
+  .logo {
+    height: 30vh;
+    width: 38vw;
+    margin-left: auto;
+    margin-right: auto;
+  }
 }
 
-@media (max-width:1500px) and (min-width:1100px) {
-    .details {
-        width: 50%;
-    }
-    .projectname {
-        font-size: 2rem;
-    }
+@media (max-width: 1100px) and (min-width: 800px) {
+  .details {
+    width: 50%;
+  }
 
-    .projectabout {
-        font-size: 1.5rem;
-    }
-
-    .projectview {
-        font-size: 1.3rem;
-    }
-
-
-    
+  .logo {
+    height: 35vh;
+  }
 }
 
+@media (max-width: 1500px) and (min-width: 1100px) {
+  .details {
+    width: 50%;
+  }
+  .projectname {
+    font-size: 2rem;
+  }
 
+  .projectabout {
+    font-size: 1.5rem;
+  }
+
+  .projectview {
+    font-size: 1.3rem;
+  }
+
+  .logo {
+    height: 40vh;
+  }
+}
