--- a/src/components/Portfolio.css
+++ b/src/components/Portfolio.css
@@ -51,7 +51,7 @@
 
   .logo {
     height: 25vh;
-    width: 65vw;
+    width: 70vw;
     margin-left: auto;
     margin-right: auto;
   }
@@ -103,5 +103,6 @@
 
   .logo {
     height: 40vh;
+    width: 35vw
   }
 }
