--- a/src/index.css
+++ b/src/index.css
@@ -1,18 +1,36 @@
 body {
- background-color: #E9EDEF
+  /* background-color: #e9edef; */
+  background: linear-gradient(-45deg, #ee7752, #e73c7e, #23a6d5, #23d5ab);
+  background-size: 400% 400%;
+  animation: gradient 5s ease infinite;
+}
+
+@keyframes gradient {
+  0% {
+    background-position: 0% 50%;
+  }
+  50% {
+    background-position: 100% 50%;
+  }
+  100% {
+    background-position: 0% 50%;
+  }
 }
 
 @font-face {
-    font-family: 'BebasNeue';
-    src: local('BebasNeue'), url(./fonts/BebasNeue-Regular.ttf) format('truetype');
-  }
+  font-family: "BebasNeue";
+  src: local("BebasNeue"),
+    url(./Utils/fonts/BebasNeue-Regular.ttf) format("truetype");
+}
 
 @font-face {
-    font-family: 'InriaSerif';
-    src: local('InriaSerif'), url(./fonts/InriaSerif-Regular.ttf) format('truetype');
-  }  
+  font-family: "InriaSerif";
+  src: local("InriaSerif"),
+    url(./Utils/fonts/InriaSerif-Regular.ttf) format("truetype");
+}
 
 @font-face {
-    font-family: 'InriaSerifItalic';
-    src: local('InriaSerifItalic'), url(./fonts/InriaSerif-Italic.ttf) format('truetype');
-  }   
+  font-family: "InriaSerifItalic";
+  src: local("InriaSerifItalic"),
+    url(./Utils/fonts/InriaSerif-Italic.ttf) format("truetype");
+}
